# xp_wellys_vfr_trainer

./: .clang-tidy  .gitignore  CLAUDE.md  CMakeLists.txt  CONCEPT.md  Makefile  README.md  skunkcrafts_updater.cfg  skunkcrafts_updater_sizeslist.txt  skunkcrafts_updater_whitelist.txt
.github/: FUNDING.yml
.github/workflows/: build.yml
data/: settings.json
docs/: airport_difficulty_prompt.md  airport_score_cache.md  atc_transmission_json.md  flight_log_json.md  post_flight_correlation.md  post_flight_report.md
mac_x64/: xp_wellys_vfr_trainer.xpl
src/: main.cpp
src/airports/: airport_data.hpp  airport_db.cpp  airport_db.hpp  airport_score_cache.cpp  airport_score_cache.hpp  airport_scorer.cpp  airport_scorer.hpp  apt_dat_parser.cpp  apt_dat_parser.hpp  geo.cpp  geo.hpp
src/backends/: i_language_model.hpp  loader.cpp  loader.hpp  manager.cpp  manager.hpp  mistral_lm.cpp  mistral_lm.hpp  openai_common.cpp  openai_common.hpp  openai_lm.cpp  openai_lm.hpp
src/core/: logging.cpp  logging.hpp
src/dependencies/: dependencies.cpp  dependencies.hpp  xplm_plugin_probe.cpp  xplm_plugin_probe.hpp
src/fms/: fms_writer.cpp  fms_writer.hpp
src/persistence/: keychain.cpp  keychain.hpp  settings.cpp  settings.hpp
src/postflight/: atc_log.cpp  atc_log.hpp  correlation.cpp  correlation.hpp  discovery.cpp  discovery.hpp  evaluator.cpp  evaluator.hpp  flight_log.cpp  flight_log.hpp  report_cache.cpp  report_cache.hpp
src/preflight/: flight_suggester.cpp  flight_suggester.hpp
src/ui/: clipboard.hpp  clipboard.mm  clipboard_win.cpp  trainer_ui.cpp  trainer_ui.hpp
testdata/: 2026-06-30_1135_EDTZ-EDNY.json  2026-06-30_EDTZ_EDNY_BN2P.json  2026-07-01_1127_EDNY-LSZR.json  2026-07-01_EDNY_LSZR_BN2P.json  session_reports.json
tests/: CMakeLists.txt  test_airport_score_cache.cpp  test_airport_scorer.cpp  test_airports.cpp  test_backends.cpp  test_dependencies.cpp  test_postflight.cpp  test_preflight.cpp  test_smoke.cpp
tools/skunkcrafts/: generate.py  skunkcrafts_updater.cfg.template
win_x64/: xp_wellys_vfr_trainer.xpl
